[gd_scene load_steps=12 format=3 uid="uid://cvk4q47iay47k"]

[ext_resource type="Texture2D" uid="uid://ge70qicfftvq" path="res://resources/items/equipment/armor/_assets/default_mage.png" id="1_8ci5l"]
[ext_resource type="Script" path="res://object_scenes/player/player_model/player_model.gd" id="1_h1lsn"]
[ext_resource type="Texture2D" uid="uid://bau33k2shs4yb" path="res://resources/items/equipment/armor/_assets/default_person.png" id="3_jkwak"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ei8el"]
atlas = ExtResource("1_8ci5l")
region = Rect2(97, 145, 46, 30)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_tlxwe"]
atlas = ExtResource("3_jkwak")
region = Rect2(49, 65, 94, 79)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_l1ppv"]
atlas = ExtResource("3_jkwak")
region = Rect2(49, 1, 94, 63)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_54ltl"]
atlas = ExtResource("1_8ci5l")
region = Rect2(49, 145, 46, 30)
filter_clip = true

[sub_resource type="Animation" id="Animation_b25uh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBodyParts:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UpperBodyParts:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UpperBodyParts/Node2D/HeadSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.971363)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LeftFootSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-22, 16)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RightFootSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(22, 16)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RightFootSprite:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("LeftFootSprite:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_13rlv"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBodyParts:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 5), Vector2(0, 7), Vector2(0, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UpperBodyParts:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.95), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UpperBodyParts/Node2D/HeadSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667, 0.266667, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1.04, 0.857142)]
}

[sub_resource type="Animation" id="Animation_5c1iu"]
resource_name = "move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBodyParts:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.3, 0.333333, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(0, 2), Vector2(0, 4), Vector2(0, -4), Vector2(0, 1), Vector2(0, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightFootSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-25, 7), Vector2(2, 6), Vector2(17, 6), Vector2(26, 14), Vector2(8, 15), Vector2(-18, 16), Vector2(-21, 9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftFootSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.233333, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(22, 14), Vector2(8, 16), Vector2(-26, 16), Vector2(-24, 9), Vector2(-21, 5), Vector2(2, 13), Vector2(24, 6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LeftFootSprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.550109, 0.0, 0.0, 0.00600356, 1.96868, 2.09151, 1.16755]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RightFootSprite:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.333333, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [2.06921, 1.59765, 1.1261, -0.720018, 0.0, 0.00628304, 0.00671425]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("UpperBodyParts/Node2D/HeadSprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.2, 0.3, 0.333333, 0.366667, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.12), Vector2(1, 1), Vector2(1.08, 0.839999), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1.11314), Vector2(1, 0.986281), Vector2(1.08, 0.839999), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("UpperBodyParts:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.0333333, 0.0666667, 0.1, 0.333333, 0.366667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.965184, 0.846699), Vector2(1, 1), Vector2(1, 1), Vector2(0.965184, 0.846699), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbgvu"]
_data = {
"RESET": SubResource("Animation_b25uh"),
"idle": SubResource("Animation_13rlv"),
"move": SubResource("Animation_5c1iu")
}

[node name="PlayerModel" type="Node2D"]
script = ExtResource("1_h1lsn")
metadata/_edit_horizontal_guides_ = [32.0]
metadata/_edit_vertical_guides_ = [-38.0, -29.0, -27.0, -26.0, -4.0, 20.0, 37.0]

[node name="RightFootSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(22, 16)
scale = Vector2(1.2, 1.2)
texture = SubResource("AtlasTexture_ei8el")
offset = Vector2(4, 8)

[node name="UpperBodyParts" type="Node2D" parent="."]
position = Vector2(0, 5)

[node name="TorsoSprite" type="Sprite2D" parent="UpperBodyParts"]
unique_name_in_owner = true
position = Vector2(3, 24)
texture = SubResource("AtlasTexture_tlxwe")
offset = Vector2(-3, -24)

[node name="Node2D" type="Node2D" parent="UpperBodyParts"]
position = Vector2(0, 4.3697)
scale = Vector2(1.2, 1.2)

[node name="HeadSprite" type="Sprite2D" parent="UpperBodyParts/Node2D"]
unique_name_in_owner = true
position = Vector2(8, -23)
scale = Vector2(1, 0.971363)
texture = SubResource("AtlasTexture_l1ppv")
offset = Vector2(-7, -21)

[node name="LeftFootSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-22, 16)
scale = Vector2(1.2, 1.2)
texture = SubResource("AtlasTexture_54ltl")
offset = Vector2(4, 8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
deterministic = true
libraries = {
"": SubResource("AnimationLibrary_tbgvu")
}
speed_scale = 1.2
